--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -7,32 +7,42 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- Include the tag for introductory content -->
 
-    <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-  
-    <!-- Write the markup for a navigation and link items to appropriate pages -->
-    About
-    Episodes
+  <!-- Include the tag for introductory content -->
+<header role="banner">
+  <!-- Display sysk logo nested in an anchor tag to link to index.html -->
+  <a href="../index.html"><img src="/images/sysk-logo.webp" alt="A red and black logo of the stuff you should know podcast"></a>
+  <!-- Write the markup for a navigation and link items to appropriate pages -->
+    <nav role="navigation">
+      <ul>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="episodes.html">Episodes</a></li>
+      </ul>
+    </nav>
+</header>
 
 
 
   <!-- Add an element that represents the main content of the page --> 
+  <main role="main">
 
     <!-- Main heading for the page -->
-    Featured Episodes
+    <h1>Featured Episodes</h1>
 
-    There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this order.
+    <p>There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this order.</p>
 
     <!-- Display the following as a list and link to appropriate existing html page -->
-    1. Interesting Origins of Everday Phrases
-    2. The History of Fake Towns
-    3. Doppelgängers: Hey you, you're me!
-
-
+    <ol>
+      <li><a href="everyday-phrases.html">Interesting Origins of Everday Phrases</a></li>
+      <li><a href="fake-towns.html">The History of Fake Towns</a></li>
+      <li><a href="doppelgangers.html">Doppelgängers: Hey you, you're me!</a></li>
+    </ol>
+  </main>
 
   <!-- Include the tag for footer content -->
-  &copy; SYSK 2023 
+  <footer>
+    <p><small>&copy; SYSK 2023</small></p>
+  </footer>023 
 
 
 </body>
